--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="assets/images/avatar-jessica.jpeg" alt="headshot of jessica randall" class="hero-img" />
       <h1>Jessica Randall</h1>
       <h2>London, United Kingdom</h2>
-      <small>"Front-end developer and avid reader."</small>
+      <p>"Front-end developer and avid reader."</p>
       <div class="btn-container">
         <button class="btn">GitHub</button>
         <button class="btn">Frontend Mentor</button>
